# helion-core

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu.apple  Dockerfile.cpu.intel  README.md  RUNPOD.md  USAGE.md  docker-compose.test-server.yml  setup.cfg
.github/workflows/: run-tests.yaml
benchmarks/: benchmark_forward.py  benchmark_inference.py  benchmark_training.py
compose/dht/: .env.example  docker-compose.window.yml  docker-compose.yml
compose/gateway/: .env.example  Dockerfile  app.py  docker-compose.yml  test.py
compose/worker/: .env.example  config.cpu.sample.yml  config.sample.yml  docker-compose.cpu.apple.yml  docker-compose.cpu.intel.yml  docker-compose.ubuntu.yml  docker-compose.window.yml
examples/: prompt-tuning-personachat.ipynb  prompt-tuning-sst2.ipynb
scripts/: serve_multi_models.py
src/: requirements.txt
src/helion/: __init__.py  dht_utils.py
src/helion/cli/: run_dht.py  run_prod_server.sh  run_server.py
src/helion/client/: __init__.py  config.py  from_pretrained.py  inference_session.py  ptune.py  remote_forward_backward.py  remote_generation.py  remote_sequential.py  sequential_autograd.py
src/helion/client/routing/: __init__.py  sequence_info.py  sequence_manager.py  spending_policy.py
src/helion/models/: __init__.py
src/helion/models/bloom/: __init__.py  block.py  config.py  model.py
src/helion/models/falcon/: __init__.py  config.py  model.py
src/helion/server/: backend.py  block_functions.py  block_selection.py  block_utils.py  from_pretrained.py  handler.py  memory_cache.py  reachability.py  server.py  throughput.py
src/helion/utils/: __init__.py  auto_config.py  convert_block.py  dht.py  disk_cache.py  peft.py  version.py
tests/: test_aux_functions.py  test_block_exact_match.py  test_cache.py  test_chained_calls.py  test_dtype.py  test_full_model.py  test_gemma3_registration.py  test_optimized_layers.py  test_peft.py  test_priority_pool.py  test_qwen3_cache_reorder.py  test_remote_sequential.py  test_sequence_manager.py  test_server_stats.py  test_speculative_generation.py  test_tensor_parallel.py
(+21 files in other folders)
