[metadata]
name = helion
version = attr: helion.__version__
author = Helion Developers
author_email = dev@helion.network
description = Easy way to efficiently run 100B+ language models without high-end GPUs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helion-network/helion-core
project_urls =
    Bug Tracker = https://github.com/helion-network/helion-core/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.6
    bitsandbytes>=0.41.3
    accelerate>=0.30.0
    huggingface-hub>=0.20.0,<1.0.0
    tokenizers>=0.15.0
    pillow>=10.0.0
    transformers>=4.55.0,<4.56.0  # if you change this, please also change version assert in helion/__init__.py
    speedtest-cli==2.1.3
    hivemind @ git+https://github.com/learning-at-home/hivemind.git@213bff98a62accb91f254e2afdccbf1d69ebdea9
    tensor_parallel==1.0.23
    humanfriendly
    async-timeout>=4.0.2
    cpufeature>=0.2.0; platform_machine == "x86_64"
    packaging>=20.9
    sentencepiece>=0.1.99
    peft>=0.10.0
    safetensors>=0.4.0
    Dijkstar>=2.6.0
    numpy<2

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-forked
    pytest-asyncio==0.16.0
    black==22.3.0
    isort==5.10.1
    psutil

[options.packages.find]
where = src
